--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<p>Bangun Prakas Sujatmiko</p>
 		<p>1700016070</p>
 		<ul>
-			<li><a href="praktikum1.html">Praktikum 1 - Canvas HTML</a></li>
+			<li><a href="praktikum_1_1700016070.html">Praktikum 1 - Canvas HTML</a></li>
 			<li><a href="praktikum2.html">Praktikum 2 - Interaktivitas</a></li>
 			<li><a href="praktikum3.html">Praktikum 3 - </a></li>
 		</ul>
