--- a/praktikum_1_1700016070.html
+++ b/praktikum_1_1700016070.html
@@ -19,8 +19,9 @@
 		ctx.beginPath();
 		ctx.arc(400, 225, 130, 0, 2*Math.PI);
 		ctx.fillStyle = "#8B0000";
+		ctx.lineWidth = 5;
 		ctx.fill();
-		ctx.strokeStyle= "#FFFFFF";
+		ctx.strokeStyle = "#FFFFFF";
 		ctx.stroke();
 
 		//lingkaran2
@@ -29,21 +30,16 @@
 		ctx.fillStyle = "#FFA500";
 		ctx.fill();
 
-		//persegi v1
-		// ctx.beginPath();		
-		// ctx.fillStyle = "#708090";		
-		// ctx.fillRect(360,185,80,80);		
-		// ctx.strokeRect(360,185,80,80);
-		// ctx.strokeStyle= "#FFFFFF";
-
-		//persegi v2
-		ctx.beginPath();		
-		ctx.fillStyle = "#FFFFFF";		
-		ctx.fillRect(355,180,90,90);				
+		//persegi
+		ctx.beginPath();
 		ctx.fillStyle = "#708090";		
-		ctx.fillRect(360,185,80,80);		
+		ctx.fillRect(360,185,80,80);
+		ctx.lineWidth = 5;
+		ctx.strokeRect(360,185,80,80);
+		ctx.strokeStyle = "#FFFFFF";
+		ctx.stroke();
 		
-		//segitiga
+		//segitiga1
 		ctx.beginPath();
 		ctx.moveTo(50,225);
 		ctx.lineTo(150,120);
@@ -51,7 +47,7 @@
 		ctx.fillStyle = "#228B22";
 		ctx.fill();
 
-		//segitiga
+		//segitiga2
 		ctx.beginPath();
 		ctx.moveTo(750,225);
 		ctx.lineTo(650,120);
