--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_1_1700016070.html">Praktikum 1 - Canvas HTML</a></li>
 			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_2_1700016070.html">Praktikum 2 - Interaktivitas</a></li>
 			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_3_1700016070.html">Praktikum 3 - Vector Pattern</a></li>
+			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_4_1700016070.html">Praktikum 4 - Puzzle Project</a></li>
 		</ul>
 	</body>
 </html>
