--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_2_1700016070.html">Praktikum 2 - Interaktivitas</a></li>
 			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_3_1700016070.html">Praktikum 3 - Vector Pattern</a></li>
 			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_4_1700016070.html">Praktikum 4 - Puzzle Project</a></li>
+			<li><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_5_1700016070.html">Praktikum 5 - Motion Tween</a></li>
 		</ul>
 	</body>
 </html>
