--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Praktikum | MULON</title>
-    <link href='http://fonts.googleapis.com/css?family=Days+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/css/font.css" type='text/css'>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
