--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#" class="toggle">Gulung</a>
 
     </section>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <script src="assets/jquery/jquery.min.js"></script>
     <script src="assets/js/makisu.js"></script>
     <script>
 
