--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_5_1700016070.html">Praktikum 5 - Motion Tween</a></dd>
         </dl>
 
-        <a href="#" class="toggle">Gulung</a>
+<!--         <a href="#" class="toggle">Gulung</a> -->
 
     </section>
-    <script src="assets/jquery/jquery.min.js"></script>
+<!--     <script src="assets/jquery/jquery.min.js"></script> -->
     <script src="assets/js/makisu.js"></script>
     <script>
 
