--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_3_1700016070.html">Praktikum 3 - Vector Pattern</a></dd>
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_4_1700016070.html">Praktikum 4 - Puzzle Project</a></dd>
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_5_1700016070.html">Praktikum 5 - Motion Tween</a></dd>
+            <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/uts_mulon_1700016070.html">UTS Multimedia Online</a></dd>
         </dl>
 
 <!--         <a href="#" class="toggle">Gulung</a> -->
