--- a/uts_mulon_1700016070.html
+++ b/uts_mulon_1700016070.html
@@ -9,7 +9,7 @@
 		}
 		canvas {
 			background-image: url('assets/pic1.jpg');
-			background-size: absolute;
+			background-size: 1366px 663px;
 		}
 		.text { 
 			position: absolute;
