--- a/uts_mulon_1700016070.html
+++ b/uts_mulon_1700016070.html
@@ -43,8 +43,8 @@
 		    mY = -100
 
 		    //ukuran canvas
-		    canvas.width = window.innerWidth;
-		    canvas.height = window.innerHeight;
+		    canvas.width = 1366px;
+		    canvas.height = 663px;
 
 		//membentuk objek salju
 		function salju() {
