--- a/uts_mulon_1700016070.html
+++ b/uts_mulon_1700016070.html
@@ -8,7 +8,7 @@
 			height: 100%;
 		}
 		canvas {
-			background-image: url('assets/pic1.jpg');
+			background-image: url('pic1.jpg');
 			background-size: 1366px 663px;
 		}
 		.text { 
@@ -43,8 +43,8 @@
 		    mY = -100
 
 		    //ukuran canvas
-		    canvas.width = 1366px;
-		    canvas.height = 663px;
+		    canvas.width = 1366;
+		    canvas.height = 663;
 
 		//membentuk objek salju
 		function salju() {
