--- a/praktikum_6_1700016070.html
+++ b/praktikum_6_1700016070.html
@@ -71,7 +71,7 @@
             var sampleSize = 1024;  // number of samples to collect before analyzing data
             var amplitudeArray;     // array to hold time domain data
             // This must be hosted on the same server as this page - otherwise you get a Cross Site Scripting error
-            var audioUrl = "Low_Life_High_Life.mp3";
+            var audioUrl = "assets/audio/ROY KNOX - I Wish [NCS Release].mp3";
             // Global Variables for the Graphics
             var canvasWidth  = 1000;
             var canvasHeight = 450;
