--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_6_1700016070.html">Praktikum 6 - Audio Visualizer</a></dd>
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_7_1700016070.html">Praktikum 7 - Audio Recording</a></dd>
             <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/praktikum_8_1700016070.html">Praktikum 8 - Image Manipulating</a></dd>
+            <dd><a href="https://bangun1700016070.github.io/Multimedia_Online/tugas_akhir_1700016070.html">Tugas Akhir</a></dd>
             
         </dl>
 
