--- a/tugas_akhir_1700016070.html
+++ b/tugas_akhir_1700016070.html
@@ -117,7 +117,7 @@
         <p>1700016070</p>
         <p>Multimedia Online A</p>
         <p>Pecahkan balon di luar text box ini !</p>
-        <p>Ups audionya nunggu ya, download dulu gengs :)</p>
+        <p>Ups audionya nunggu ya, load dulu gengs :)</p>
     </div>
 </body>
 </html>
